	* il_tga.c: Added iTargaSize.

2009-01-25 Denton Woods <doomwiz@users.sf.net>
	* ilut_internal.h:63-67: Redid definitions of IL_TEXT to coincide with il_internal.h.
	* il_states.c: Updated _ilLoadExt/_ilSaveExt with all extensions.
	* il_states.h: Updated with all extensions.
	* All image formats with saving: Changed return values of ilSaveXxxF and ilSaveXxxL to be
	  an integer stating the number of bytes written.  This is what ilSaveF/L have been
	  trying to return all along.
	* il_pal.c:1075: Added error condition.
	* lib/Makefile.am: Added il_size.c.
	* simple.c: Added iluInit call.
	* il_dds-save.c (GetAlphaBlock): Applied code from GetBlock, since it was still reading out of bounds.
	* il_psd.c (ParseResources):808: Added check for ResourceSize being too small.  
	  834-837: Added check to insure that we are not copying from past the end of Resource.
	* il_hdr.c:527-528: Changed order so that beg_run+run_count is tested first.
	* il_psd.c:829: Subtracted an additional 4 for the Size obtained in the lines before.
	* il_jp2.c:792-792: Added cleanup code if failure.  676-680: Added call to jas_init.
	  Added code throughout to prevent from having to initialize Jasper more than once.
	* il_internal.h/il_internal.c: Added strdup for Windows CE.
	* il_internal.h:105-107: Added so that we do not try to compile inline ASM with Windows Mobile.

2009-01-26 Denton Woods <doomwiz@users.sf.net>
	* projects/win mobile: Added Windows Mobile projects.
	* Removed .cvsignore files from SVN.
	* il_bits.c:65: Commented out icloser call.
	* include/IL/DevIL.i: Removed IL/ prefix on header filenames.
	* projects folder: Renamed msvc to msvc9.
	* il_tpl.c: Added for TPL support.
	* il_io.c: Added function calls for TPL support.
	* il_internal.h: Added declarations for TPL support.

2009-01-27 Denton Woods <doomwiz@users.sf.net>
	* il_bits.c (bseek): Changed check for return values of iseek.
	* il_tpl.c: Added support for many more TPL data formats.
	